--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,7 @@ $background-linear-blue: linear-gradient(15deg, #2363c4 30%, #063279);
 // Font colors
 $color-font-light: #FFFFFF;
 $color-font-md: #333;
+$color-font-li: #2363c4;
 
 // Font sizes
 $title-font-size: clamp(2rem, 1.7573rem + 1.0356vw, 3rem);
