--- a/components/sections/HeroSection.module.scss
+++ b/components/sections/HeroSection.module.scss
@@ -17,7 +17,7 @@
     position: absolute;
     content: '';
     inset: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.35);
     z-index: 2;
   }
 
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 10%;
     z-index: 2;
     @include mix.font-style-primary;
     @media (max-width: 1024px) {
@@ -61,7 +62,6 @@
     left: -215px;
     top: 45px;
     z-index: 6;
-    text-shadow: 0 0 100px #edfdd2, 0 0 100px #edfdd2, 0 0 120px #edfdd2, 0 0 130px #edfdd2, 0 0 250px #edfdd2, 0 0 250px #edfdd2;
     color: $color-font-md;
   }
   &__name:nth-of-type(1) {
