--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 
 // Backgrounds
-$background-header: linear-gradient(160deg, #215db6 50%, #05337c);
+$background-header: linear-gradient(160deg, #215db6 10%, #05337c 80%);
 $background-light: #FFFFFF;
-$background-linear-blue: linear-gradient(15deg, #2363c4 30%, #063279);
+$background-linear-blue: linear-gradient(-40deg, #2363c4 30%, #063279);
 
 // Font colors
 $color-font-light: #FFFFFF;
