--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 
 // Backgrounds
-$background-header: linear-gradient(160deg, #215db6 10%, #05337c 80%);
+$background-header: linear-gradient(to right, rgb(21, 73, 150) 0%, rgb(0, 31, 80) 100%);
 $background-light: #FFFFFF;
-$background-linear-blue: linear-gradient(-40deg, #2363c4 30%, #063279);
+$background-linear-blue: linear-gradient(45deg, rgb(0, 40, 100) 0%, rgb(29, 112, 236) 100%);
 
 // Font colors
 $color-font-light: #FFFFFF;
