--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,9 +15,9 @@ html, body {
   flex-wrap: wrap;
 }
 
-.gradient-text {
-  background: linear-gradient(-45deg, #2363c4 30%, #063279);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent; 
-}
+// .gradient-text {
+//   background: linear-gradient(-45deg, #2363c4 30%, #063279);
+//   -webkit-background-clip: text;
+//   background-clip: text;
+//   color: transparent; 
+// }
