--- a/components/sections/LeistungenSection.module.scss
+++ b/components/sections/LeistungenSection.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   background-color: $background-light;
   color: $color-font-md;
-  background-color: #dddcdc;
+  background: linear-gradient(to right, rgba(67, 94, 115, 1) 0%, rgba(168, 191, 209, 1) 100%);
   @include mix.font-kanit;
   &__articleWrapper {
     display: flex;
@@ -14,9 +14,10 @@
     flex: 1;
   }
   &__article {
-    padding: clamp(1.25rem, 0.7949rem + 1.9417vw, 3.125rem);
+    padding: 100px; //===================================
     padding-right: 70px;
     max-width: 65%;
+    color: $color-font-light;
     @media (max-width: 1250px) {
       max-width: 100%;
      
@@ -48,7 +49,7 @@
     transform: translateX(clamp(0rem, -2.7306rem + 11.6505vw, 11.25rem));
     list-style: circle;
     li {
-        color: $color-font-li;
+
       font-size: clamp(1.125rem, 1.034rem + 0.3883vw, 1.5rem);
       font-weight: 300;
     }
@@ -58,7 +59,7 @@
   }
   &__imageWrapper {
   position: relative;
-  width: 30%;
+  width: 25%;
   aspect-ratio: 1 / 1.1; 
   overflow: hidden;
 
