--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -16,3 +16,6 @@ $li-font-size: clamp(1.125rem, 3.034rem + 0.3883vw, 1.705rem);
 
 // Padding 
 $padding-section: clamp(3.125rem, 1.608rem + 6.4725vw, 9.375rem)  clamp(1.25rem, 0.7949rem + 1.9417vw, 3.125rem) clamp(4.375rem, 1.6444rem + 11.6505vw, 15.625rem);
+
+// Heights
+$header-height: 60px;
