--- a/components/layout/Nav/Navbar.module.scss
+++ b/components/layout/Nav/Navbar.module.scss
@@ -6,13 +6,12 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
-  height: 60px;
-  padding-left: clamp(2.5rem, 1.8932rem + 2.589vw, 5rem);
   font-family: var(--font-montserrat);
-  
   font-weight: 300;
-  
+  padding-left: clamp(2.5rem, 1.8932rem + 2.589vw, 5rem);
+
   &__content {
+    height: $header-height;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,13 +31,13 @@
   &__logoImage {
     position: relative;
     width: 150px;
+    height: $header-height;
     aspect-ratio: 1/1;
   }
 
   &__links {
     display: flex;
     gap: 1rem;
-    transform: translateX(clamp(6.25rem, 7.767rem + -6.4725vw, 0rem));
     font-weight: 500;
     font-size: 16px;
     @media (max-width: 1024px) {
@@ -62,17 +61,17 @@
 
     &--active {
       animation: activeLinkBlink 1.35s linear infinite;
-      
     }
   }
 
   &__contactSvgs {
-        @media (max-width: 1024px) {
-            display: none;
-        }
+    @media (max-width: 1024px) {
+      display: none;
     }
+  }
 
   &__hamburger {
+    padding: 10px;
     background: transparent;
     border: none;
     color: $color-font-light;
