--- a/components/sections/HeroSection.module.scss
+++ b/components/sections/HeroSection.module.scss
@@ -3,42 +3,18 @@
 @use "../../styles/_animations" as *;
 
 
-.heroVideo {
-  display: flex;
-  flex-shrink: 1;
-  width: 100%;
-  max-width: 1920px;
-  min-height: 500px;
-  aspect-ratio: 1/1;
-  object-fit: cover;
-}
-
 .heroSection {
   display: flex;
   justify-content: center;
-  
   max-height: 85vh;
   width: 100%;
-  position: sticky;
-  top: 60;
-  z-index: -1;
-
-  &__banner {
+ 
+  &__slider {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10%;
     z-index: 2;
     @include mix.font-style-primary;
-    @media (max-width: 1024px) {
-      transform: scale(0.8);
-    }
-    @media (max-width: 768px) {
-      transform: scale(0.6);
-    }
-    @media (max-width: 480px) {
-      transform: scale(0.4);
-    }
   }
   &__title {
     position: relative;
