--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,10 +1,20 @@
+@use "./variables" as *;
+
 @mixin font-style-primary {
     font-family: var(--font-montserrat);
 }
-
 
 @mixin font-kanit($weight: 400) {
   font-family: var(--font-kanit);
   font-weight: $weight;
   line-height: 1.15;
+}
+
+@mixin sectionLayoutDark {
+  position: relative;
+  padding: $padding-section;
+  color: $color-font-light;
+  width: 100%;
+  overflow: hidden;
+  z-index: 1;
 }
