--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -16,6 +16,7 @@ $color-font-li: #2363c4;
 
 // Font sizes
 $title-font-size: clamp(2rem, 1.7573rem + 1.0356vw, 3rem);
+$subtitle-font-size: clamp(1.6rem, 1.4058rem + 0.8285vw, 2.4rem);
 $paragraph-font-size: clamp(0.3125rem, -0.3701rem + 2.9126vw, 3.125rem);
 $li-font-size: clamp(1.125rem, 3.034rem + 0.3883vw, 1.705rem);
 
