--- a/components/ui/BookingWidget/AppointmentPicker/Calendar/Calendar.module.scss
+++ b/components/ui/BookingWidget/AppointmentPicker/Calendar/Calendar.module.scss
@@ -7,7 +7,6 @@
   font-family: sans-serif;
 }
 
-// Dani u nedelji
 .calendar__weekdays {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -21,7 +20,6 @@
   padding: 5px 0;
 }
 
-// Grid sa danima
 .calendar__body {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -30,7 +28,6 @@
   padding-left: clamp(0.125rem, -1.1086rem + 5.2632vw, 0.75rem);
 }
 
-// Jedna ćelija
 .calendar__cell {
   display: flex;
   justify-content: center;
@@ -44,7 +41,8 @@
 }
 
 .calendar__cell:not(.calendar__cell--empty):not(.calendar__cell--selected):hover {
-background-color: rgba(120, 123, 126, 0.096);
+background: radial-gradient(circle,rgba(14, 190, 102, 0.322) 0%, rgba(255, 255, 255, 0) 70%);
+color: rgb(153, 153, 153);
 transition: background-color 0.2s ease-in-out;
 }
 
@@ -53,14 +51,11 @@ transition: background-color 0.2s ease-in-out;
   cursor: default;
 }
 
-.calendar__cell--today {
-  
-}
-
 .calendar__cell--selected {
-  background-color: rgba(120, 123, 126, 0.849);
-  color: rgb(255, 255, 255);
+  background: radial-gradient(circle,rgba(14, 190, 101, 1) 0%, rgba(255, 255, 255, 0) 100%);
+  color: #FFFFFF;
   transition: background-color 0.3s ease-in-out;
+  
 }
 
 .calendar__day {
