--- a/components/ui/BookingWidget/AppointmentPicker/TimeSelector/TimeSelector.module.scss
+++ b/components/ui/BookingWidget/AppointmentPicker/TimeSelector/TimeSelector.module.scss
@@ -16,13 +16,14 @@
     border: 1px solid rgba(0, 0, 0, 0.295);
     border-radius: 5px;
     box-shadow: inset -1.3 -1.5 0 0 black;
-    transition: box-shadow 0.15s ease-in;
+    transition: box-shadow 0.05s ease-in;
     cursor: pointer;
     
     &--selected {
       box-shadow: inset -0.5 -0.7 0 0 black;
       transform: scale(0.99) translate(0px, 1px);
-      color: rgba(104, 103, 103, 0.555);
+      color: #FFFFFF;
+      background-color: #0ebe65;
     }
   }
 }
