--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -25,3 +25,6 @@ $padding-section: clamp(2.5rem, 1.5898rem + 3.8835vw, 6.25rem) clamp(1.25rem, 0.
 
 // Heights
 $header-height: 60px;
+
+// Border Radius 
+$form-border-radius: 5px;
