--- a/components/sections/OnlineTermineSection.module.scss
+++ b/components/sections/OnlineTermineSection.module.scss
@@ -2,39 +2,15 @@
 @use "../../styles/mixins" as mix;
 
 .onlineTermineSection {
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   gap: 20px;
-  &::before {
-    position: absolute;
-    content: "JDMW";
-    top: clamp(-300px, calc(-35.6vw + 384.5px), 250px);
-    left: -100px;
-    opacity: 0.03;
-    font-size: clamp(12.5rem, 3.3981rem + 38.835vw, 50rem);
-    transform: rotate(290deg);
-    color: rgb(88, 88, 134);
-    z-index: - 1;
-    @media (min-width: 768px) {
-     
-        transform: rotate(310deg);
-      
-    }
-    @media (min-width: 1024px) {
-      transform: rotate(325deg);
-    }
-    @media (min-width: 1440px) {
-      transform: rotate(335deg);
-    }
-    @media (min-width: 1920px) {
-      transform: rotate(345deg);
-    }
-  }
+  background-color: #ffffff;
+background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%239C92AC' fill-opacity='0.03'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   @include mix.sectionLayoutLight;
   &__article {
-    max-width: 58%;
-    @media (max-width: 1024px) {
+    max-width: 50%;
+    @media (max-width: 1125px) {
       min-width: 100%;
     }
   }
@@ -57,9 +33,9 @@
     max-width: 500px;
     max-height: 500px;
     height: auto;
-    padding: 10px;
+    margin: 0 auto;
     border-radius: 10px;
-    overflow-y: auto;
+    margin-bottom: clamp(1.25rem, 0.7949rem + 1.9417vw, 3.125rem);
     &::-webkit-scrollbar {
     width: 10px;
   }
