feat: redesign mobile menu button and mobile navbar styles

--- a/components/layout/Header/Header.module.scss
+++ b/components/layout/Header/Header.module.scss
@@ -1,8 +1,8 @@
 @use '../../../styles/variables' as *;
 
 .header {
-    position: sticky;
-    inset: 0;
+    position: fixed;
+    top: 0;
     width: 100%;
     background: $background-header;
     z-index: 10;
