--- a/app/globals.scss
+++ b/app/globals.scss
@@ -25,3 +25,28 @@ html, body {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 30px;
+  width: 100px;
+  padding: 5px 8px;
+  clip-path: path('M0,0 L100,0 L80,100 Q50,120 20,100 Z');
+  border-radius: 0 0 70px 70px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  
+  span {
+    display: block;
+    background-color: #FFF;
+    width: 50%;
+    height: 2px;
+    border-radius: 2px;
+  }
+}
