feat: make sections overlaping and create contactSection with contacForm, google map. TODO: styles for section and add footer to the bottom.

--- a/components/sections/LeistungenSection.module.scss
+++ b/components/sections/LeistungenSection.module.scss
@@ -2,6 +2,8 @@
 @use "../../styles/mixins" as mix;
 
 .leistungenSection {
+  position: sticky;
+  top: 60px;
   background: $background-linear-gray;
   @include mix.font-kanit;
   &__articleWrapper {
