--- a/components/sections/HeroSection.module.scss
+++ b/components/sections/HeroSection.module.scss
@@ -2,11 +2,14 @@
 @use "../../styles/mixins" as mix;
 
 .heroSection {
+  position: fixed;
+  top: 0;
+  margin-top: 60px;
   display: flex;
   justify-content: center;
-  max-height: 85vh;
+  max-height: 86.5vh;
   width: 100%;
- 
+ z-index: -1;
   &__slider {
     display: flex;
     flex-direction: column;
