--- a/components/sections/ContactSection.module.scss
+++ b/components/sections/ContactSection.module.scss
@@ -6,17 +6,35 @@
   padding: 0;
   gap: 50px;
   background: $background-linear-blue;
+  z-index: 2;
+  overflow: hidden;
   &__mapWrapper {
     flex: 1;
-    min-width: 400px;
+    
     min-height: 100%;
     position: relative;
     @media (max-width: 1024px) {
-      width: 100%;
+      min-width: 100%;
       height: 40vh;
     }
+   }
+   &__info {
+    flex: 1;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 10px;
+      padding: clamp(1.875rem, 0.8131rem + 4.5307vw, 6.25rem) 0;
+    }
+   &__contactInfo,
+  &__openingHours {
+    font-size: clamp(1.125rem, 1.0036rem + 0.5178vw, 1.625rem);
+    padding: 40px 0;
+    min-width: 100%; 
+    text-align: center;
+    @media (min-width: 480px) {
+      min-width: 375px;
+    }
   }
-
   &__mapIframe {
     position: absolute;
     top: 0;
@@ -28,6 +46,7 @@
   &__formWrapper {
     display: flex;
     flex-wrap: wrap;
+  
     flex: 2;
   }
 }
