--- a/components/layout/Nav/MobileNavbar.module.scss
+++ b/components/layout/Nav/MobileNavbar.module.scss
@@ -7,25 +7,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  top: -491px;
+  top: -470px;
   right: 0;
   width: 100%;
   background: $background-header;
-  padding-top: 70px;
+  padding: 70px 0 20px;
   height: 550px;
-  z-index: 5;
+  z-index: 15;
   transition: top 0.5s ease;
   @media (min-width: 1025px) {
     display: none;
   }
   &--open {
-    top: 0;
+    top: -50px;
     z-index: 5;
   }
   &__hamburgerBtn {
     background: linear-gradient(to right, #0d3a7c 0%, #082f6a 100%);
     border: none;
     top: 550px;
+    z-index: 1;
   }
   &__overlay--active {
     position: fixed;
