--- a/components/layout/Nav/MobileNavbar.module.scss
+++ b/components/layout/Nav/MobileNavbar.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  top: -550px;
+  top: 0px;
   right: 0;
   width: 100%;
   background: $background-header;
@@ -15,19 +15,59 @@
   height: 550px;
   z-index: 15;
   transition: top 0.5s ease;
+    &::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: calc(50% - 50px); 
+  height: 3px;             
+  background: linear-gradient(transparent, rgba(24, 25, 80, 0.705));
+}
+  &::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: calc(50% - 50px);
+  height: 3px;
+  background: linear-gradient(transparent, rgba(24, 25, 80, 0.705));
+  
+}
   @media (min-width: 1025px) {
     display: none;
   }
   &--open {
-    top: -50px;
+    top: 0;
     z-index: 5;
   }
   &__hamburgerBtn {
     background: linear-gradient(to right, #0d3a7c 0%, #082f6a 100%);
     border: none;
-    top: 550px;
+    top: 547.5px;
     z-index: 1;
+    box-shadow: inset 0 -2px 2px 0 rgba(12, 12, 41, 0.74);
   }
+  &__hamburgerBtn::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 10px; 
+  height: 100%;             
+  transform: skew(-18deg);             
+  background: linear-gradient(100deg, transparent, rgba(12, 12, 41, 0.74));
+}
+&__hamburgerBtn::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 10px; 
+  height: 100%;
+  transform: skew(21deg);             
+  background: linear-gradient(100deg, transparent, rgba(24, 25, 80, 0.705));
+}
   &__overlay--active {
     position: fixed;
     inset: 0;
@@ -41,7 +81,7 @@
     text-decoration: none;
     font-size: 22px;
     line-height: 16px;
-    animation: fadeInLinks 2.5s forwards;
+    animation: fadeInLinks 1.5s forwards;
     &--active {
       animation: activeLinkBlink 1.35s linear infinite,
         fadeInLinks 2.5s forwards;
