--- a/styles/__animations.scss
+++ b/styles/__animations.scss
@@ -1,44 +1,39 @@
-// @keyframes slideLeft {
-//   100% {
-//     transform: translateX(-50px);
-//   }
-//   0%,
-//   70% {
-//     transform: translateX(30px);
-//   }
-// }
+@keyframes slideLeft {
+  0%, 70% {
+    transform: translateX(30px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
 
-// @keyframes slideRight {
-//   100% {
-//     transform: translateX(90px);
-//   }
-//   0%,
-//   70% {
-//     transform: translateX(10px);
-//   }
-// }
+@keyframes slideRight {
+    0%, 70% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(-30px);
+  }
+}
 
-// @keyframes slideUp {
-//   0%,
-//   70% {
-//     transform: translateY(280px);
-//   }
+@keyframes slideUp {
+  0% {
+    transform: translateY(60px);
+  }
   
-//   100% {
-//     transform: translateY(0);
-//   }
-// }
+  100% {
+    transform: translateY(0);
+  }
+}
 
-// @keyframes fadeIn {
-//   0%,
-//   10% {
-//     opacity: 0;
-//   }
-//   80%,
-//   100% {
-//     opacity: 1;
-//   }
-// }
+@keyframes fadeInLogo {
+  0%, 40% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 // @keyframes fadeInH2 {
 //   0%,
@@ -92,3 +87,5 @@
     opacity: 1;
   }
 }
+
+
