feat: Add full overlay content for all slides and create footer

--- a/components/ui/CustomSlider/Slider.module.scss
+++ b/components/ui/CustomSlider/Slider.module.scss
@@ -7,13 +7,13 @@
             display: none;
         }
     }
-    &__activeImage {
-
-        animation: heroMotion 10s linear infinite;
-    }
     &__activeSlide {
         
         animation: fadeIn 1s forwards;
         
     }
+}
+
+.slider__preview--activeImg {
+    animation: heroMotion 10s linear infinite;
 }
