--- a/app/globals.scss
+++ b/app/globals.scss
@@ -7,6 +7,7 @@
 html, body {
     font-family: var(--font-kanit);
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -77,4 +78,7 @@ body {
 }
 .contact-links a:hover {
   text-decoration: underline;
+}
+a {
+  text-decoration: none;
 }
