--- a/styles/__animations.scss
+++ b/styles/__animations.scss
@@ -89,9 +89,22 @@
   0%, 10% {
      opacity: 0;
     transform: translateX(0);
+    opacity: 0.7;
+    
+   
   }
   100% {
     opacity: 1;
     transform: translateX(var(--translateX, 0px));
+    box-shadow: 2px 2px 25px 15px rgba(0, 0, 0, 0.24);
+  }
+}
+
+@keyframes slideDurationTimer {
+ from {
+    width: 0;
+  }
+  to {
+    width: 100%;
   }
 }
