--- a/components/sections/HomePage/HandwerkOnlineSection.module.scss
+++ b/components/sections/HomePage/HandwerkOnlineSection.module.scss
@@ -1,5 +1,5 @@
-@use "../../styles/variables" as *;
-@use "../../styles/mixins" as mix;
+@use "../../../styles/variables" as *;
+@use "../../../styles/mixins" as mix;
 
 .handwerkOnlineSection {
   background: $background-linear-blue;
