--- a/components/sections/HomePage/LeistungenSection.module.scss
+++ b/components/sections/HomePage/LeistungenSection.module.scss
@@ -1,5 +1,5 @@
-@use "../../styles/variables" as *;
-@use "../../styles/mixins" as mix;
+@use "../../../styles/variables" as *;
+@use "../../../styles/mixins" as mix;
 
 .leistungenSection {
   position: sticky;
